force-app/force-app/force-app/main/default/objects/OpportunityLineItem/fields/Basic_Unit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Basic_Unit_Rate__c</fullName>
    <label>Basic Unit Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>