force-app/force-app/force-app/main/default/objects/OpportunityLineItem/fields/Opp_Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product_Discount__c</fullName>
    <label>Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>