force-app/force-app/force-app/main/default/objects/OpportunityLineItem/fields/Opp_Product_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product_Total_Price__c</fullName>
    <label>Total Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>