force-app/force-app/force-app/main/default/objects/OpportunityLineItem/fields/PPD_Discount__c.field-meta.xml
<CustomField>
    <fullName>PPD_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PPD Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>