force-app/force-app/force-app/main/default/objects/OpportunityLineItem/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <label>Product Description</label>
    <type>TextArea</type>
</CustomField>