force-app/force-app/force-app/main/default/objects/OpportunityLineItem/fields/SPL_DISCOUNT__c.field-meta.xml
<CustomField>
    <fullName>SPL_DISCOUNT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SPL DISCOUNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>