force-app/force-app/force-app/main/default/objects/OpportunityLineItem/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Code</label>
    <referenceTo>Tax_Code__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>