force-app/force-app/force-app/main/default/objects/OpportunityLineItem/fields/Taxable_Value__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Value__c</fullName>
    <label>Taxable Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>