force-app/force-app/force-app/main/default/objects/OpportunityLineItem/fields/Total_Price_Temp__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Temp__c</fullName>
    <formula>Quantity * (UnitPrice - (ROUND(UnitPrice *  Opp_Product_Discount__c , 2))) * (1 - (  PPD_Discount__c  +  VD_Discount__c  + SPL_DISCOUNT__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price Temp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>