force-app/force-app/force-app/main/default/objects/OpportunityLineItem/fields/Total_Price_With_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_With_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Price With Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>