force-app/force-app/force-app/main/default/objects/OpportunityLineItem/fields/UoM__c.field-meta.xml
<CustomField>
    <fullName>UoM__c</fullName>
    <label>UoM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>KGS.</fullName>
            </value>
            <value>
                <fullName>LTRS.</fullName>
            </value>
            <value>
                <fullName>NOS.</fullName>
            </value>
            <value>
                <fullName>PKTS.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>